--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.bikedata_berlin">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="de.example.bikedata_berlin">
   <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-  <application android:label="bikedata_berlin_testbuild_1" android:icon="@mipmap/ic_launcher">
+  <application android:label="bikethefts_berlin" android:icon="@mipmap/ic_launcher">
 
 
     <activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
