--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
   intl: ^0.17.0
   hive: ^2.0.4
   hive_flutter: ^1.1.0
-  location: ^4.2.0
+  geolocator: ^8.0.1
+  # location: ^4.2.0
   proj4dart:
   fl_chart: ^0.40.0
   flutter_map: ^0.14.0
@@ -42,6 +43,7 @@ dependencies:
   simplify: ^1.0.2
   shared_preferences: ^2.0.7
   tuple: ^2.0.0
+  
 
 
   # The following adds the Cupertino Icons font to your application.
