--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   intl: ^0.17.0
   hive: ^2.0.4
   hive_flutter: ^1.1.0
-  geolocator: ^8.0.1
+  geolocator: ^7.0.3
   proj4dart:
   fl_chart: ^0.40.0
   flutter_map: ^0.14.0
@@ -41,12 +41,19 @@ dependencies:
   simplify: ^1.0.2
   shared_preferences: ^2.0.7
   tuple: ^2.0.0
-  
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
+dependency_overrides:
+  geolocator_android:
+    hosted:
+      name: geolocator_android
+      url: https://hanntech-gmbh.gitlab.io/free2pass/flutter-geolocator-floss
+
+
+  
 
 dev_dependencies:
   flutter_test:
