--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
 
-  <application android:label="bikethefts_berlin" android:icon="@mipmap/ic_launcher">
+  <application android:label="Fahrraddiebstahlwarnung" android:icon="@mipmap/ic_launcher">
 
 
     <activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
